# Text-Summerizer-API

./: .gitignore  README.md  pyproject.toml
app/: main.py  model.py  schemas.py
